<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_white_24dp"
        android:title="@string/Nav_Home" />
    <item
        android:id="@+id/nav_inv"
        android:icon="@drawable/baseline_mail_outline_white_24dp"
        android:title="@string/nav_invitations" />
    <item
        android:id="@+id/nav_board"
        android:icon="@drawable/baseline_bar_chart_white_24dp"
        android:title="@string/nav_leaderboard" />
    <item
        android:id="@+id/nav_purchase"
        android:icon="@drawable/baseline_shopping_cart_white_24dp"
        android:title="@string/nav_purchase" />
</menu>