<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="5dp"
    android:background="@color/ms_white"
    >


<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/favourite_club"
    android:textSize="20sp"
    android:textColor="@color/ms_black"
    android:layout_marginStart="5dp"
    android:textStyle="bold"
    />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/favourite_club"
        android:hint="@string/example_Arsenal"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/heightTextView"
        android:text="@string/height"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/ms_black"
        android:layout_marginStart="5dp"
        android:textStyle="bold"
        />

        <EditText
            android:id="@+id/heightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/hieght_hint"
            android:inputType="numberDecimal" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferred_foot"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/ms_black"
        android:paddingEnd="20dp"
        android:layout_marginStart="5dp"
        />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >

            <RadioButton
                android:id="@+id/leftRadioButton"
                style="@style/RadioButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-thin"
                android:text="@string/left"
                android:textSize="14sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rightRadioButton"
                style="@style/RadioButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-thin"
                android:text="@string/right"
                android:checked="true"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RadioGroup>

    </LinearLayout>




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/position_on_the_field"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/ms_black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/ms_black"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp"
            android:paddingEnd="20dp"
            android:text="@string/player_style"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/styleSpinner"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/ms_black"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp"
            android:paddingEnd="15dp"
            android:text="@string/player_position"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/positionSpinner"
            android:layout_marginTop="15dp"
            android:textSize="20sp"

            />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:visibility="invisible"/>




</LinearLayout>


