<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="5dp"
    android:background="@color/ms_white"
    >


    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firtNameText"
        android:hint="@string/first_name"
        android:layout_marginTop="20dp"
        />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lastNameText"
        android:hint="@string/last_name"
        android:layout_marginTop="10dp"
        />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/username"
        android:id="@+id/usernameEditText"/>
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/this_username_already_exist"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:visibility="invisible"
            android:id="@+id/validationMessage"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@color/ms_black"
            android:textColor="@color/ms_white"
            android:text="@string/verify_username"
            android:id="@+id/validationButton"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="20sp"

            android:layout_marginTop="15dp"
            android:textColor="@color/ms_black"
            android:paddingEnd="20dp"
            android:layout_marginStart="5dp"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="13dp"
            >

            <RadioButton
                android:id="@+id/femaleRadioButton"
                style="@style/RadioButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-thin"
                android:text="@string/female"
                android:textSize="14sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/maleRadioButton"
                style="@style/RadioButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-thin"
                android:text="@string/male"
                android:checked="true"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RadioGroup>

    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthdate"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/ms_black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/dSpinner"
            android:textSize="20sp"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/mSpinner"
            android:textSize="20sp"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/ySpinner"
            android:textSize="20sp"/>

    </LinearLayout>





    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/ms_black"
        />





<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/ms_black"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:paddingEnd="20dp"
        android:text="@string/country"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cSpinner"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        />

</LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/ms_black"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp"
            android:paddingEnd="15dp"
            android:text="@string/city_state"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cityEditText"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            />

    </LinearLayout>

</LinearLayout>


