<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backGround"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/startPageBackGroundColor"
    tools:context="com.gebril.yamen.pff.activites.activity.splash">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="333dp"
        android:layout_height="286dp"
        android:layout_marginTop="448dp"
        android:contentDescription="@string/firstpagelogo"
        android:src="@drawable/first_page_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/letterF2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/secondLetter"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/firstLetter"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/letterF1" />

    <TextView
        android:id="@+id/letterF1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/secondLetter"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/firstLetter"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/letterP" />

    <TextView
        android:id="@+id/letterP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:fontFamily="sans-serif"
        android:text="@string/firstLetter"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/firstLetter"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wordOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:alpha="0"
        android:text="@string/wordOne"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/remainingLetters"
        app:layout_constraintBaseline_toBaselineOf="@+id/letterP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/letterP" />

    <TextView
        android:id="@+id/wordTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="@string/wordTwo"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/remainingLetters"
        app:layout_constraintBaseline_toBaselineOf="@+id/letterF1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@+id/letterF1" />

    <TextView
        android:id="@+id/wordThree"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:lineSpacingExtra="0sp"
        android:text="@string/wordThree"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/remainingLetters"
        app:layout_constraintBaseline_toBaselineOf="@+id/letterF2"
        app:layout_constraintStart_toEndOf="@+id/letterF2" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="53dp" />

</android.support.constraint.ConstraintLayout>
